--- a/ETourisme/app/src/main/res/layout/activity_login.xml
+++ b/ETourisme/app/src/main/res/layout/activity_login.xml
@@ -132,7 +132,7 @@
                             android:orientation="horizontal">
 
                             <Button
-                                android:id="@+id/signin"
+                                android:id="@+id/btnSignin"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
