--- a/ETourisme/app/src/main/res/layout/activity_login.xml
+++ b/ETourisme/app/src/main/res/layout/activity_login.xml
@@ -45,7 +45,7 @@
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:layout_weight="1"
                     android:gravity="center_horizontal|center_vertical"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
                     <EditText
                         android:id="@+id/usernameLogin"
@@ -58,15 +58,6 @@
                         android:inputType="textPersonName"
                         android:textAlignment="center"
                         android:textSize="24sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_weight="1"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:orientation="horizontal">
 
                     <EditText
                         android:id="@+id/passwordLogin"
@@ -80,74 +71,32 @@
                         android:textAlignment="center"
                         android:textSize="24sp" />
                 </LinearLayout>
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="791dp"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:layout_weight="1"
-            android:gravity="center_horizontal|center_vertical"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal|center_vertical"
                     android:layout_weight="1"
-                    android:orientation="horizontal">
+                    android:gravity="center_horizontal|center_vertical"
+                    android:orientation="vertical">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                    <Button
+                        android:id="@+id/btnLogin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal|center_vertical"
                         android:layout_weight="1"
-                        android:orientation="vertical">
+                        android:gravity="center_horizontal|center_vertical"
+                        android:text="Se connecter"
+                        android:textSize="16sp" />
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:orientation="horizontal">
-
-                            <Button
-                                android:id="@+id/btnLogin"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_horizontal|center_vertical"
-                                android:layout_weight="1"
-                                android:gravity="center_horizontal|center_vertical"
-                                android:text="Se connecter"
-                                android:textSize="16sp" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:orientation="horizontal">
-
-                            <Button
-                                android:id="@+id/btnSignin"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:text="S'inscrire"
-                                android:textSize="16sp" />
-                        </LinearLayout>
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
+                    <Button
+                        android:id="@+id/btnSignin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="S'inscrire"
+                        android:textSize="16sp" />
 
                     <TextView
                         android:id="@+id/errorLogin"
@@ -159,8 +108,17 @@
                         android:textAlignment="center"
                         android:textColor="#DC0404"
                         android:textSize="16sp" />
+
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="791dp"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_weight="1"
+            android:gravity="center_horizontal|center_vertical"
+            android:orientation="horizontal"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
