--- a/ETourisme/app/src/main/res/layout/activity_sign_in_fragment4.xml
+++ b/ETourisme/app/src/main/res/layout/activity_sign_in_fragment4.xml
@@ -41,6 +41,24 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/emailSignIn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:hint="Adresse e-mail"
+                        android:inputType="textEmailAddress"
+                        android:minHeight="48dp"
+                        android:textAlignment="center" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_weight="1">
 
                     <EditText
