--- a/ETourisme/app/src/main/res/layout/activity_login.xml
+++ b/ETourisme/app/src/main/res/layout/activity_login.xml
@@ -82,19 +82,21 @@
 
                     <Button
                         android:id="@+id/btnLogin"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal|center_vertical"
                         android:layout_weight="1"
                         android:gravity="center_horizontal|center_vertical"
+                        android:minHeight="48dp"
                         android:text="Se connecter"
                         android:textSize="16sp" />
 
                     <Button
                         android:id="@+id/btnSignin"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:minHeight="48dp"
                         android:text="S'inscrire"
                         android:textSize="16sp" />
 
@@ -107,6 +109,15 @@
                         android:gravity="center_horizontal|center_vertical"
                         android:textAlignment="center"
                         android:textColor="#DC0404"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/successSignIn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textAlignment="center"
+                        android:textColor="#00AF07"
                         android:textSize="16sp" />
 
                 </LinearLayout>
