--- a/ETourisme/app/src/main/res/layout/activity_sign_in_fragment5.xml
+++ b/ETourisme/app/src/main/res/layout/activity_sign_in_fragment5.xml
@@ -77,7 +77,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:ems="10"
-                        android:hint="Confirmation"
+                        android:hint="Confirmer mot de passe"
                         android:inputType="textPassword"
                         android:minHeight="48dp" />
                 </LinearLayout>
