--- a/ETourisme/app/src/main/res/menu/activity_main_drawer.xml
+++ b/ETourisme/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,15 +6,16 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/side_nav_bar"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:id="@+id/nav_list"
+            android:icon="@android:drawable/ic_menu_sort_by_size"
+            android:title="@string/menu_list_site" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_settings"
+            android:icon="@android:drawable/ic_menu_manage"
+            android:title="@string/menu_settings" />
+ 
     </group>
 </menu>
