--- a/ETourisme/app/src/main/res/layout/activity_splash.xml
+++ b/ETourisme/app/src/main/res/layout/activity_splash.xml
@@ -2,12 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/ic_splash_background">
+    android:background="@drawable/side_nav_bar">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitCenter"
-        android:src="@mipmap/ic_splash" />
+        android:src="@drawable/ic_etourimse" />
 
 </RelativeLayout>
