--- a/ETourisme/app/src/main/res/layout/app_bar_main.xml
+++ b/ETourisme/app/src/main/res/layout/app_bar_main.xml
@@ -14,7 +14,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="#2E2B2B"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
     </com.google.android.material.appbar.AppBarLayout>
