--- a/ETourisme/app/src/main/res/navigation/mobile_navigation.xml
+++ b/ETourisme/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,14 +12,9 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="first.app.e_tourisme.view.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_settings"
+        android:name="first.app.e_tourisme.view.ui.settings.SettingsPrefFragment"
+        android:label="@string/menu_home"
+        tools:layout="@layout/fragment_settings_pref" />
 
-    <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="first.app.e_tourisme.view.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
 </navigation>
