--- a/ETourisme/app/src/main/res/values/styles.xml
+++ b/ETourisme/app/src/main/res/values/styles.xml
@@ -5,4 +5,8 @@
         <item name="android:textColorPrimary">@android:color/black</item>
         <item name="android:homeAsUpIndicator">@drawable/ic_nav_drawer</item>
     </style>
+
+    <style name="settings" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:windowBackground">@android:color/background_dark</item>
+    </style>
 </resources>
