--- a/ETourisme/app/src/main/res/layout/activity_sign_in_fragment3.xml
+++ b/ETourisme/app/src/main/res/layout/activity_sign_in_fragment3.xml
@@ -65,6 +65,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:background="#4CAF50"
                         android:text="Suivant" />
                 </LinearLayout>
             </LinearLayout>
@@ -82,6 +83,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
+                android:background="#2196F3"
                 android:text="Vous avez déja un compte ?"
                 android:textColor="@color/white" />
 
