--- a/ETourisme/app/src/main/res/layout/activity_sign_in_fragment5.xml
+++ b/ETourisme/app/src/main/res/layout/activity_sign_in_fragment5.xml
@@ -92,6 +92,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
+                        android:background="#4CAF50"
                         android:text="Valider"
                         tools:ignore="TouchTargetSizeCheck" />
 
@@ -121,6 +122,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
+                android:background="#2196F3"
                 android:text="Vous avez déja un compte ?"
                 android:textColor="@color/white" />
 
