--- a/ETourisme/app/src/main/res/xml/root_preferences.xml
+++ b/ETourisme/app/src/main/res/xml/root_preferences.xml
@@ -17,18 +17,14 @@
 
     </PreferenceCategory>
 
-    <PreferenceCategory app:title="@string/sync_header">
+    <PreferenceCategory app:title="Notification">
 
         <SwitchPreferenceCompat
-            app:key="sync"
-            app:title="@string/sync_title" />
-
-        <SwitchPreferenceCompat
-            app:dependency="sync"
-            app:key="attachment"
-            app:summaryOff="@string/attachment_summary_off"
-            app:summaryOn="@string/attachment_summary_on"
-            app:title="@string/attachment_title" />
+            app:key="notify"
+            app:summaryOff="Désactiver"
+            app:summaryOn="Activé"
+            app:title="Notification des commentaires" />
+        
 
     </PreferenceCategory>
 
