--- a/ETourisme/app/src/main/res/layout/fragment_list.xml
+++ b/ETourisme/app/src/main/res/layout/fragment_list.xml
@@ -18,4 +18,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <include
+        layout="@layout/activity_load"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
