--- a/ETourisme/app/src/main/res/menu/activity_main_drawer.xml
+++ b/ETourisme/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,7 +6,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/side_nav_bar"
+            android:icon="@android:drawable/btn_star"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_list"
@@ -16,6 +16,11 @@
             android:id="@+id/nav_settings"
             android:icon="@android:drawable/ic_menu_manage"
             android:title="@string/menu_settings" />
- 
+        <item
+            android:id="@+id/nav_logOut"
+            android:icon="@android:drawable/ic_delete"
+            android:title="@string/logout" />
+
     </group>
+
 </menu>
