--- a/ETourisme/app/src/main/res/xml/root_preferences.xml
+++ b/ETourisme/app/src/main/res/xml/root_preferences.xml
@@ -1,30 +1,36 @@
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory app:title="@string/messages_header">
+    <!-- <PreferenceCategory app:title="@string/messages_header">
 
-        <EditTextPreference
-            app:key="signature"
-            app:title="@string/signature_title"
-            app:useSimpleSummaryProvider="true" />
+         <EditTextPreference
+             app:key="signature"
+             app:title="@string/signature_title"
+             app:useSimpleSummaryProvider="true" />
 
-        <ListPreference
-            app:defaultValue="reply"
-            app:entries="@array/reply_entries"
-            app:entryValues="@array/reply_values"
-            app:key="reply"
-            app:title="@string/reply_title"
-            app:useSimpleSummaryProvider="true" />
+         <ListPreference
+             app:defaultValue="reply"
+             app:entries="@array/reply_entries"
+             app:entryValues="@array/reply_values"
+             app:key="reply"
+             app:title="@string/reply_title"
+             app:useSimpleSummaryProvider="true" />
 
-    </PreferenceCategory>
+     </PreferenceCategory>-->
 
     <PreferenceCategory app:title="Notification">
 
+        <!-- <SwitchPreferenceCompat
+             app:key="notify"
+             app:summaryOff="Désactiver"
+             app:summaryOn="Activé"
+             app:title="Notification des commentaires" />-->
+
         <SwitchPreferenceCompat
-            app:key="notify"
+            app:key="notifyLogOut"
             app:summaryOff="Désactiver"
             app:summaryOn="Activé"
-            app:title="Notification des commentaires" />
-        
+            app:title="Notification de déconnexion" />
+
 
     </PreferenceCategory>
 
