--- a/ETourisme/app/src/main/res/values/styles.xml
+++ b/ETourisme/app/src/main/res/values/styles.xml
@@ -9,4 +9,8 @@
     <style name="settings" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:windowBackground">@android:color/background_dark</item>
     </style>
+
+    <style name="details" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:windowBackground">@android:color/white</item>
+    </style>
 </resources>
