--- a/ETourisme/app/src/main/res/navigation/mobile_navigation.xml
+++ b/ETourisme/app/src/main/res/navigation/mobile_navigation.xml
@@ -16,5 +16,10 @@
         android:name="first.app.e_tourisme.view.ui.settings.SettingsPrefFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_settings_pref" />
+    <fragment
+        android:id="@+id/nav_list"
+        android:name="first.app.e_tourisme.view.ui.listSite.ListFragment"
+        android:label="@string/menu_list_site"
+        tools:layout="@layout/fragment_list" />
 
 </navigation>
