--- a/ETourisme/app/src/main/res/navigation/mobile_navigation.xml
+++ b/ETourisme/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,9 +13,9 @@
 
     <fragment
         android:id="@+id/nav_settings"
-        android:name="first.app.e_tourisme.view.ui.settings.SettingsPrefFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_settings_pref" />
+        android:name="first.app.e_tourisme.view.ui.settings.SettingsFragment"
+        android:label="@string/menu_settings"
+        tools:layout="@layout/activity_preference" />
     <fragment
         android:id="@+id/nav_list"
         android:name="first.app.e_tourisme.view.ui.listSite.ListFragment"
