--- a/ETourisme/app/src/main/res/values/styles.xml
+++ b/ETourisme/app/src/main/res/values/styles.xml
@@ -4,13 +4,15 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:textColorPrimary">@android:color/black</item>
         <item name="android:homeAsUpIndicator">@drawable/ic_nav_drawer</item>
+
     </style>
 
     <style name="settings" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:windowBackground">@android:color/background_dark</item>
+        <item name="android:windowBackground">@android:color/background_light</item>
     </style>
 
     <style name="details" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:windowBackground">@android:color/white</item>
+        <item name="android:windowBackground">@android:color/background_light</item>
     </style>
+
 </resources>
