--- a/ETourisme/app/src/main/res/layout/activity_detail.xml
+++ b/ETourisme/app/src/main/res/layout/activity_detail.xml
@@ -6,14 +6,62 @@
     android:layout_height="match_parent"
     tools:context=".view.DetailActivity">
 
-    <TextView
-        android:id="@+id/nomSite"
-        android:layout_width="244dp"
-        android:layout_height="58dp"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="83dp"
-        tools:layout_editor_absoluteY="80dp" />
+    <LinearLayout
+        android:id="@+id/detailView"
+        android:layout_width="409dp"
+        android:layout_height="729dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/nomSite"
+            android:layout_width="287dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="115sp"
+            android:text="Titre site"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/imageDetail"
+            android:layout_width="400sp"
+            android:layout_height="200sp"
+            android:layout_marginLeft="5sp"
+            android:layout_marginTop="10sp"
+            tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+        <TextView
+            android:id="@+id/lieu"
+            android:layout_width="287dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="115sp"
+            android:layout_marginTop="10sp"
+            android:text="Lieu site"
+            android:textSize="20sp"
+            android:textStyle="italic" />
+
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5sp"
+            android:layout_marginTop="10sp"
+            android:layout_marginRight="5sp"
+            android:text="Description site"
+            android:textSize="16sp" />
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:layout_marginLeft="50sp"
+            android:layout_marginTop="10sp"
+            android:layout_marginRight="50sp"
+            android:background="?android:attr/listDivider" />
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
