--- a/ETourisme/app/src/main/res/layout/fragment_home.xml
+++ b/ETourisme/app/src/main/res/layout/fragment_home.xml
@@ -6,11 +6,9 @@
     android:orientation="vertical"
     tools:context=".view.ui.home.HomeFragment">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bienvenue sur l'écran d'accueil !"
-        android:textColor="#FF0000" />
+    <WebView
+        android:id="@+id/webView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
 
