--- a/ETourisme/app/src/main/res/layout/activity_detail.xml
+++ b/ETourisme/app/src/main/res/layout/activity_detail.xml
@@ -63,5 +63,53 @@
             android:layout_marginRight="50sp"
             android:background="?android:attr/listDivider" />
 
+        <ListView
+            android:id="@+id/listeCommentaire"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10sp"
+            android:layout_marginTop="16sp"
+            android:layout_marginRight="10sp"
+            android:layout_marginBottom="200sp" />
+
+        <EditText
+            android:id="@+id/editTextTextMultiLine"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:gravity="start|top"
+            android:inputType="textMultiLine" />
+
+        <LinearLayout
+            android:id="@+id/addCommentaire"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10sp"
+            android:layout_marginTop="-185sp"
+            android:layout_marginRight="10sp"
+            android:layout_marginBottom="10sp"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/contenuCommentaire"
+                android:layout_width="match_parent"
+                android:layout_height="100sp"
+                android:layout_marginLeft="5sp"
+                android:layout_marginTop="5sp"
+                android:layout_marginRight="5sp"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="Votre commentaire" />
+
+            <Button
+                android:id="@+id/boutonCommentaire"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5sp"
+                android:layout_marginTop="10sp"
+                android:text="Envoyer" />
+        </LinearLayout>
+
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
