--- a/ETourisme/app/src/main/res/layout/activity_detail.xml
+++ b/ETourisme/app/src/main/res/layout/activity_detail.xml
@@ -112,4 +112,11 @@
 
     </LinearLayout>
 
+    <include
+        layout="@layout/activity_load"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="731dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
