--- a/ETourisme/app/src/main/res/layout/fragment_list.xml
+++ b/ETourisme/app/src/main/res/layout/fragment_list.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".view.ui.listSite.ListFragment">
 
+    <EditText
+        android:id="@+id/searchEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Recherche"
+        tools:ignore="MissingConstraints" />
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="0dp"
